syntax = "proto3";

import "google/protobuf/empty.proto";

package site.pdli.messaging;

service WorkerService {
  rpc Heartbeat(HeartbeatRequest) returns (google.protobuf.Empty);
  rpc FileWriteComplete(FileWriteCompleteRequest) returns (google.protobuf.Empty);
  rpc SendTask(SendTaskRequest) returns (SendTaskResponse);
}

enum WorkerStatus {
  IDLE = 0;
  BUSY = 1;
  TERMINATED = 2;
}

message HeartbeatRequest {
  string worker_id = 1;
  string timestamp = 2;
  WorkerStatus status = 3;
}

message FileWriteCompleteRequest {
  string worker_id = 1;
  string task_id = 2;
  repeated string output_files = 3;
}

enum TaskType {
  MAP = 0;
  REDUCE_READ = 1;
  REDUCE = 2;
  TERMINATE = 3;
}

message SendTaskRequest {
  string worker_id = 1;
  TaskType task_type = 2;
  string task_id = 3;
  repeated string input_files = 4;
}

message SendTaskResponse {
  bool ok = 1;
}
